Move sensible things back out of build-logic